--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,8 +61,10 @@
                 <a href="{{ url_for('view_article', article_name='about') }}" class="page-nav__item"><span>About</span></a>
                 <a href="{{ url_for('colophon') }}" class="page-nav__item page-nav__item--small"><span>Colophon</span></a>
                 <form action="{{ url_for('search') }}" method="GET" class="header-search">
-                    <input type="text" name="q" class="header-search__input" placeholder="Search" value="{{ keywords }}" tabindex="1" />
-                    <button type="submit" class="header-search__submit" tabindex="1">Go</button>
+                    <label class="header-search__label">
+                        <span class="header-search__text"><span>Search</span></span>
+                        <input type="text" name="q" class="header-search__input" placeholder="Search" value="{{ keywords }}" />
+                    </label>
                 </form>
             </nav>
         </div>
