--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -22,20 +22,40 @@
 
 
 {% macro post_list_item(title, subtitle='', description='', category='', image='', url='', class='') -%}
-    <li class="post-list__item {{ class }}">
+    <li class="post-list__item {{ class }}" itemprop="itemListElement" itemscope itemType="http://schema.org/BlogPosting">
         <a href="{{ url }}" class="post-list__anchor">
             {% if category %}
                 <span class="post-list__label">{{ category }}</span>
             {% endif %}
-            <h3 class="post-list__title">{{ title }}</h3>
+            <h3 class="post-list__title" itemprop="name">{{ title }}</h3>
             {% if subtitle %}
-                <h3 class="post-list__subtitle">{{ subtitle }}</h3>
+                <h3 class="post-list__subtitle" itemprop="headline">{{ subtitle }}</h3>
             {% endif %}
             {% if description %}
-                <p class="post-list__description">{{ description }}</p>
+                <p class="post-list__description" itemprop="description">{{ description }}</p>
             {% endif %}
             {% if image %}
-                <img src="{{ image }}" alt="" class="post-list__image" />
+                <img src="{{ image }}" alt="" class="post-list__image" itemprop="thumbnailUrl" />
+            {% endif %}
+        </a>
+    </li>
+{%- endmacro %}
+
+{% macro review_list_item(title, subtitle='', description='', category='', image='', url='', class='') -%}
+    <li class="post-list__item {{ class }}" itemprop="itemListElemetn" itemscope itemtype="http://schema.org/Review">
+        <a href="{{ url }}" class="post-list__anchor">
+            {% if category %}
+                <span class="post-list__label">{{ category }}</span>
+            {% endif %}
+            <h3 class="post-list__title" itemprop="name">{{ title }}</h3>
+            {% if subtitle %}
+                <h3 class="post-list__subtitle" itemprop="alternateName">{{ subtitle }}</h3>
+            {% endif %}
+            {% if description %}
+                <p class="post-list__description" itemprop="description">{{ description }}</p>
+            {% endif %}
+            {% if image %}
+                <img src="{{ image }}" alt="" class="post-list__image" itemprop="thumbnailUrl" />
             {% endif %}
         </a>
     </li>
