--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,16 +26,26 @@
 
         <div class="content">
             <h4 class="home-more-title">More things:</h4>
-            <ul class="post-list home-posts grid">
+            <ul class="post-list home-posts grid" itemscope itemtype="https://schema.org/ItemList">
                 {% for post in posts %}
                     {% if not loop.first %}
-                        {{ includes.post_list_item(post.title,
-                              subtitle=post.subtitle,
-                              description=post.abstract,
-                              category='Review' if post.type == 'review' else 'Article',
-                              image=post.image_list,
-                              url=url_for('view_review', review_name=post.url) if post.type == 'review' else url_for('view_article', article_name=post.url),
-                              class='grid__unit grid__unit--1-3-w') }}
+                        {% if post.type == 'review' %}
+                            {{ includes.review_list_item(post.title,
+                                  subtitle=post.subtitle,
+                                  description=post.abstract,
+                                  category='Review',
+                                  image=post.image_list,
+                                  url=url_for('view_review', review_name=post.url),
+                                  class='grid__unit grid__unit--1-3-w') }}
+                        {% else %}
+                            {{ includes.post_list_item(post.title,
+                                  subtitle=post.subtitle,
+                                  description=post.abstract,
+                                  category='Article',
+                                  image=post.image_list,
+                                  url=url_for('view_article', article_name=post.url),
+                                  class='grid__unit grid__unit--1-3-w') }}
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
             </ul>
