Add meta descriptions to major pages

--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ article.title }} {{ article.subtitle }} // {% endblock %}
 
+{% block description %}{{ article.abstract }} (a whiskey blog article){% endblock %}
+
 {% block headermodifier %}page-header--article{% endblock %}
 
 {% block body %}
