--- a/app/templates/article_list.html
+++ b/app/templates/article_list.html
@@ -2,6 +2,8 @@
 
 {% block title %}Articles // {% endblock %}
 
+{% block description %}Thoughts about bourbon, rye, and Scotch whiskey{% endblock %}
+
 {% block body %}
     <section role="main">
 
