--- a/app/templates/colophon.html
+++ b/app/templates/colophon.html
@@ -2,6 +2,8 @@
 
 {% block title %}Colophon // {% endblock %}
 
+{% block description %}Site colophon of Tim drinks whiskies, detailing how it was made and what it's running on{% endblock %}
+
 {% block body %}
     <article role="main">
 
