--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block description %}Reviews and thoughts on bourbon, rye, and Scotch whiskey. Approach the whiskey shelf with confidence!{% endblock %}
+
 {% block headermodifier %}page-header--home{% endblock %}
 
 {% block body %}
