--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ review.title }} {{ review.subtitle }} // {% endblock %}
 
+{% block description %}{{ review.abstract }} (a whiskey review){% endblock %}
+
 {% block headermodifier %}page-header--article{% endblock %}
 
 {% block body %}
