--- a/app/templates/review_list.html
+++ b/app/templates/review_list.html
@@ -2,6 +2,8 @@
 
 {% block title %}Reviews // {% endblock %}
 
+{% block description %}Bourbon, rye, and Scotch whiskey reviews. Sort, filter, and find the perfect drink for you{% endblock %}
+
 {% block body %}
     <section role="main">
 
