--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
+    <meta name="description" content="{% block description %}{% endblock %}" />
 
     <title>{% block title %}{% endblock %}Tim drinks whiskies</title>
 
