Add scores article link to review detail

--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -144,6 +144,7 @@
 
             <p class="article-reference">
                 <a href="{{ url_for('view_article', article_name='ethics') }}">Review ethics</a>
+                <a href="{{ url_for('view_article', article_name='scoring') }}">Where are the scores?</a>
             </p>
 
         </section>
