Increase readability of article contents

--- a/app/static/sass/layout/_article.scss
+++ b/app/static/sass/layout/_article.scss
@@ -38,6 +38,9 @@ Article
         display: inline-block;
         margin-right: 0.4em;
     }
+    &__divider {
+        opacity: 0.4;
+    }
 }
 
 .article-reference a {
