Shrink subtitle notes

--- a/app/static/sass/module/_common.scss
+++ b/app/static/sass/module/_common.scss
@@ -59,7 +59,8 @@ figure {
 .title-note {
   color: $primary-dark;
   font-weight: 400;
-  opacity: 0.5;
+  opacity: 0.6;
+  font-size: $kilo;
 }
 
 .button {
